# cudautil

./: .gitignore  CMakeLists.txt  README.md
bench/: CMakeLists.txt  bench_memory.cu
inc/: reduction_kernel.h  util.h
include/: amplitudephasecalculator.h  complexdatabuilder.h  complexdatasplitter.h  cudautil.h  devicedataextractor.h  devicememoryallocator.h  hostdataextractor.h  hostmemoryallocator.h  realdataconvertor.h  realdatadifferentiator.h  realdatagenerator.h  realdatareduction.h  realdatastatistic.h  reduction_kernel.h  util.h
src/: CMakeLists.txt  cudautil.cu  util.c
tests/: CMakeLists.txt  dada_header.c  dada_header.h  dada_header.json  test.cu  test_convertors.cu  test_dada_header.c  test_differentiators.cu  test_doctest.cu  test_generators.cu  test_mean_stddev_calculators.cu  test_operators.cu
util/: CMakeLists.txt  cuda_calculators.h  cuda_convertors.h  cuda_generators.h  cuda_memory_manager.h  cuda_operators.h  cuda_overloads.h  cuda_real_histogram.h  cuda_test_utilities.h  cuda_timer.h  cuda_typecasts.h  test_utilities.h  util.h
util/inc/: reduction.cuh  util.cuh  util.h  util.hpp
util/include/: cudautil.h
util/src/: CMakeLists.txt  util.c  util.cpp  util.cu
utilities/: cuda_utilities.h  utilities.h
utils/: CMakeLists.txt  amplitudephasecalculator.h  complexbuilder.h  complexsplitter.h  cuda_amplitudephasecalculator.h  cuda_complex_utils.h  cuda_complexbuilder.h  cuda_complexsplitter.h  cuda_devicedataextractor.h  cuda_devicememoryallocator.h  cuda_hostdataextractor.h  cuda_hostmemoryallocator.h  cuda_managedmemoryallocator.h  cuda_memory_utils.h  cuda_real_utils.h  cuda_realconvertor.h  cuda_realdifferentiator.h  cuda_realgenerators.h  cuda_realhistogram.h  cuda_realreduction.h  cuda_realstatistic.h  cuda_shared_utils.h  cuda_utils.h  dada_cuda_utils.cu  dada_cuda_utils.h  dada_header_code_generator.py  dada_utils.c  dada_utils.cu  dada_utils.h  devicedataextractor.h  devicememoryallocator.h  hdf5_utils.c  hdf5_utils.h  hostdataextractor.h  hostmemoryallocator.h  managedmemoryallocator.h  realconvertor.h  realdifferentiator.h  realgenerators.h  realhistogram.h  (+10 more)
